# llm-zoomcamp

./: .gitignore  pyproject.toml
01-intro/: homework_01.ipynb
02-open-source/: Dockerfile  homework02.ipynb
