[tool.poetry]
name = "llm-zoomcamp-homework"
version = "0.1.0"
description = "LLM Zoomcamp homework"
authors = ["pdanchenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.65.0"
notebook = "^7.1.2"
openai = "^1.35.0"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.0"
pandas = "^2.0.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
